// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/timestamp.proto";

option go_package = "example/gen/entpb";

message Todo {
  int64 id = 1;

  string text = 2;

  google.protobuf.Timestamp created_at = 3;

  Status status = 4;

  int64 priority = 5;

  repeated Todo children = 103;

  Todo parent = 102;

  enum Status {
    STATUS_IN_PROGRESS = 0;

    STATUS_COMPLETED = 1;
  }
}
